# antibody-cdr-scanning

./: .gitignore  pyproject.toml
data/processed/: property_dataset.csv
data/processed/embeddings/: ee7f9676c45b7e10.npz
outputs/: all_h1_scan.csv  all_h2_scan.csv  all_h3_scan.csv  all_l1_scan.csv  all_l2_scan.csv  all_l3_scan.csv  cross_antibody_benchmark.md  cv_results.json  demo1_report.md  demo1_workflow.json  demo2_report.md  demo2_workflow.json  herceptin_h3_scan.csv  scan_summary.json
src/cdr_scan/: __init__.py  antibodies.py  engine.py  run.py  visualize.py
tests/: test_engine.py
